[tool.poetry]
name = "python-sample"
version = "0.1.0"
description = "A sample python repository"
authors = ["Chris White <me@cwprogram.com>"]
readme = "README.md"
packages = [{include = "python_sample"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.160"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = false